* Added impl for Prev
