# specs/contract.openapi.yaml
@@ -113,6 +113,7 @@ components:
       required:
         - id
         - playListId
+        - songName
       properties:
         id:
           type: integer
@@ -120,6 +121,9 @@ components:
         playListId:
           type: integer
           description: Идентификатор плейлиста
+        songName:
+          type: string
+          description: Имя трека
     Pause:
       type: object
       required:
